[tool.poetry]
name = "adk-working"
version = "0.1.0"
description = "adk fundtioning how a2a, mcp, agent work in collaboration"
authors = ["Suhukla"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-adk = "^1.2.1"
a2a-sdk = "^0.2.8"
click = "^8.2.1"
uvicorn = "^0.34.3"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
